// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SecuritySelector component should render policy description as expected 1`] = `""`;

exports[`SecuritySelector component should render policy description as expected 2`] = `
<React.Fragment>
  test2Name
   (
  test2ID
  )
</React.Fragment>
`;

exports[`SecuritySelector component should render policy description as expected 3`] = `""`;

exports[`SecuritySelector component should render policy items as expected 1`] = `
Array [
  <WithStyles(MenuItem)
    selected={false}
    value={1}
  >
    Administrators
  </WithStyles(MenuItem)>,
  <WithStyles(MenuItem)
    selected={false}
    value={2}
  >
    Theses Assessors
  </WithStyles(MenuItem)>,
  <WithStyles(MenuItem)
    selected={false}
    value={3}
  >
    Evidence Assessors
  </WithStyles(MenuItem)>,
  <WithStyles(MenuItem)
    selected={false}
    value={4}
  >
    Staff and Students
  </WithStyles(MenuItem)>,
  <WithStyles(MenuItem)
    selected={false}
    value={5}
  >
    Public
  </WithStyles(MenuItem)>,
]
`;

exports[`SecuritySelector component should render policy items as expected 2`] = `
Array [
  <WithStyles(MenuItem)
    selected={false}
    value={1}
  >
    test1Label
  </WithStyles(MenuItem)>,
  <WithStyles(MenuItem)
    selected={false}
    value={2}
  >
    test2Label
  </WithStyles(MenuItem)>,
  <WithStyles(MenuItem)
    selected={false}
    value={3}
  >
    test3Label
  </WithStyles(MenuItem)>,
]
`;

exports[`SecuritySelector component should render properly 1`] = `
<Fragment>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <Field
      component={[Function]}
      disabled={false}
      name="test1"
      required={true}
      validation={
        Array [
          [Function],
        ]
      }
    >
      <WithStyles(MenuItem)
        disabled={true}
        value={0}
      >
        test3
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="0"
        selected={true}
        value={1}
      >
        Administrators
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="1"
        selected={false}
        value={2}
      >
        Theses Assessors
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="2"
        selected={false}
        value={3}
      >
        Evidence Assessors
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="3"
        selected={false}
        value={4}
      >
        Staff and Students
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="4"
        selected={false}
        value={5}
      >
        Public
      </WithStyles(MenuItem)>
    </Field>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    style={
      Object {
        "backgroundColor": "rgba(0,0,0,0.05)",
        "padding": 24,
      }
    }
    xs={12}
  >
    <WithStyles(Typography)
      style={
        Object {
          "marginTop": -8,
        }
      }
      variant="h6"
    />
    <WithStyles(Grid)
      container={true}
      spacing={8}
      style={
        Object {
          "marginTop": 8,
        }
      }
    >
      <WithStyles(Grid)
        item={true}
        xs={2}
      >
        <b>
          Name (ID):
        </b>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        xs={10}
      >
        Administrators
         (
        1
        )
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</Fragment>
`;

exports[`SecuritySelector component should render properly 2`] = `
<Fragment>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <Field
      component={[Function]}
      disabled={false}
      name="test1"
      required={true}
      validation={
        Array [
          [Function],
        ]
      }
    >
      <WithStyles(MenuItem)
        disabled={true}
        value={0}
      >
        test3
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="0"
        selected={false}
        value={1}
      >
        Administrators
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="1"
        selected={false}
        value={2}
      >
        Theses Assessors
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="2"
        selected={false}
        value={3}
      >
        Evidence Assessors
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="3"
        selected={false}
        value={4}
      >
        Staff and Students
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        key="4"
        selected={false}
        value={5}
      >
        Public
      </WithStyles(MenuItem)>
    </Field>
  </WithStyles(Grid)>
  0
</Fragment>
`;
